--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -1,9 +1,12 @@
+FROM --platform=$BUILDPLATFORM golang:1.20.12 AS BACK
+WORKDIR /go/src/casdoor
+COPY . .
+RUN ./build.sh
+RUN go test -v -run TestGetVersionInfo ./util/system_test.go ./util/system.go > version_info.txt
+
 FROM alpine:latest AS STANDARD
 LABEL MAINTAINER="https://casdoor.org/"
 ARG USER=casdoor
-ARG TARGETOS
-ARG TARGETARCH
-ENV BUILDX_ARCH="${TARGETOS:-linux}_${TARGETARCH:-amd64}"
 
 RUN sed -i 's/https/http/' /etc/apk/repositories
 RUN apk add --update sudo
@@ -18,6 +21,7 @@ RUN adduser -D $USER -u 1000 \
     && chown -R $USER:$USER logs
 
 FROM scratch AS FINAL
-COPY --from=STANDARD /server ./
+# COPY --from=STANDARD /server ./
+COPY --from=BACK --chown=$USER:$USER /go/src/casdoor/server_linux_amd64 ./server
 
 
