--- a/conf/app.conf
+++ b/conf/app.conf
@@ -34,3 +34,4 @@ logConfig = {"filename": "logs/casdoor.log", "maxdays":99999, "perm":"0770"}
 initDataNewOnly = false
 initDataFile = "./init_data.json"
 frontendBaseDir = "../cc_0"
+avatarBaseUrl = "http://127.0.0.1:3000/"
